[project]
name = "rock-paper-scissors"
version = "0.1.0"
description = "Rock paper scissors game identification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "supervision>=0.26.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "ultralytics>=8.3.223",
]

[tool.uv.sources]
torch = [
  { index = "pytorch" },
]
torchvision = [
  { index = "pytorch" },
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
